--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
           </div>
     </Section>
-    <Section class="#create-head-section bg-dark">
+    <Section id="create-head-section" class="bg-dark">
       <div class="create-top py-5 bg-primary text-center">
         <div class="container">
           <h1 class="display-4">Create</h1>
@@ -181,7 +181,7 @@
         </div>
       </div>
     </Section>
-    <Section class="#share-head-section">
+    <Section id="share-head-section" class="#share-head-section">
       <div class="create-top py-5 bg-primary text-center">
         <div class="container">
           <h1 class="display-4">Share</h1>
